--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,12 @@ a {
     color-scheme: dark;
   }
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+as {
+  color: #000000e1;
+}
