--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400;500;600&display=swap');
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -77,6 +78,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Unbounded', cursive;
 }
 
 html,
@@ -112,5 +114,5 @@ a {
 
 
 as {
-  color: #000000e1;
+  color: #0fe0e0;
 }
